SERVER-85694 Ability to parse serialized output for $searchMeta (#18633)

GitOrigin-RevId: 57e0107998c45c39dcd8b90ed97a99b326aaa5df