src/mongo/db/pipeline/search/document_source_internal_search_mongot_remote.cpp
@@ -183,6 +183,7 @@ bool DocumentSourceInternalSearchMongotRemote::shouldReturnEOF() {
     // Return EOF if pExpCtx->uuid is unset here; the collection we are searching over has not been
     // created yet.
     if (!pExpCtx->uuid) {
+        LOGV2_DEBUG(8569402, 4, "Returning EOF due to lack of UUID");
         return true;
     }
 
@@ -202,6 +203,7 @@ void DocumentSourceInternalSearchMongotRemote::tryToSetSearchMetaVar() {
         _cursor->getCursorVars()) {
         // Variables on the cursor must be an object.
         auto varsObj = Value(_cursor->getCursorVars().value());
+        LOGV2_DEBUG(8569400, 4, "Setting meta vars", "varsObj"_attr = varsObj);
         auto metaVal = varsObj.getDocument().getField(
             Variables::getBuiltinVariableName(Variables::kSearchMetaId));
         if (!metaVal.missing()) {
@@ -219,6 +221,7 @@ void DocumentSourceInternalSearchMongotRemote::tryToSetSearchMetaVar() {
 
 DocumentSource::GetNextResult DocumentSourceInternalSearchMongotRemote::getNextAfterSetup() {
     auto response = _getNext();
+    LOGV2_DEBUG(8569401, 5, "getting next after setup", "response"_attr = response);
     auto& opDebug = CurOp::get(pExpCtx->opCtx)->debug();
 
     if (opDebug.msWaitingForMongot) {
@@ -276,11 +279,13 @@ executor::TaskExecutorCursor DocumentSourceInternalSearchMongotRemote::establish
 
 DocumentSource::GetNextResult DocumentSourceInternalSearchMongotRemote::doGetNext() {
     if (shouldReturnEOF()) {
+        LOGV2_DEBUG(8569404, 4, "Returning EOF from $internalSearchMongotRemote");
         return DocumentSource::GetNextResult::makeEOF();
     }
 
     // If the collection is sharded we should have a cursor already. Otherwise establish it now.
     if (!_cursor && !_dispatchedQuery) {
+        LOGV2_DEBUG(8569403, 4, "Establishing Cursor");
         _cursor.emplace(establishCursor());
         _dispatchedQuery = true;
     }
